// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LabeledCheckbox should match previous snapshot 1`] = `
<styled.div
  alignItems="center"
  display="flex"
>
  <CheckboxComponent
    checked={false}
    disabled={false}
    id="lcb"
  />
  <LabelComponent
    color="initial"
    disabled={false}
    forId="lcb"
    hasError={false}
    textStyle=""
  >
    Labeled Checkbox
  </LabelComponent>
</styled.div>
`;

exports[`LabeledCheckbox should match previous snapshot for checkbox with custom label text style 1`] = `
<styled.div
  alignItems="center"
  display="flex"
  textStyle="bodycopy"
>
  <CheckboxComponent
    checked={false}
    disabled={false}
    id="lcb"
  />
  <LabelComponent
    color="initial"
    disabled={false}
    forId="lcb"
    hasError={false}
    textStyle=""
  >
    Labeled Checkbox
  </LabelComponent>
</styled.div>
`;

exports[`LabeledCheckbox should match previous snapshot for checked and disabled states 1`] = `
<styled.div
  alignItems="center"
  display="flex"
>
  <CheckboxComponent
    checked={true}
    disabled={true}
    id="lcb"
  />
  <LabelComponent
    color="#707070"
    disabled={false}
    forId="lcb"
    hasError={false}
    textStyle=""
  >
    Labeled Checkbox
  </LabelComponent>
</styled.div>
`;

exports[`LabeledCheckbox should match previous snapshot for checked state 1`] = `
<styled.div
  alignItems="center"
  display="flex"
>
  <CheckboxComponent
    checked={true}
    disabled={false}
    id="lcb"
  />
  <LabelComponent
    color="initial"
    disabled={false}
    forId="lcb"
    hasError={false}
    textStyle=""
  >
    Labeled Checkbox
  </LabelComponent>
</styled.div>
`;

exports[`LabeledCheckbox should match previous snapshot for disabled state 1`] = `
<styled.div
  alignItems="center"
  display="flex"
>
  <CheckboxComponent
    checked={false}
    disabled={true}
    id="lcb"
  />
  <LabelComponent
    color="#707070"
    disabled={false}
    forId="lcb"
    hasError={false}
    textStyle=""
  >
    Labeled Checkbox
  </LabelComponent>
</styled.div>
`;
